# PID_TUNNER

./: .gitignore  CMakeLists.txt  README.md
docs/: README_RU.html
include/: cohencoon.h  internalmodelcontrol.h  mainwindow.h  pidcontroller.h  processmodel.h  tuningmethod.h  zeiglernichols.h
resources/styles/: app.qss
src/: cohencoon.cpp  internalmodelcontrol.cpp  main.cpp  mainwindow.cpp  pidcontroller.cpp  processmodel.cpp  tuningmethod.cpp  zeiglernichols.cpp
ui/: mainwindow.ui
